respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Vessel_Flight__c.object
<CustomObject>
    <description>Object used to define vessels for tracking purposes.</description>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vessels</relationshipLabel>
        <relationshipName>Vessel_Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_JOC_Sailings_List__c</fullName>
        <label>Carrier (JOC Sailings List)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admiral Container Lines</fullName>
                </value>
                <value>
                    <fullName>Admiral Marine Inc.</fullName>
                </value>
                <value>
                    <fullName>Advance Container Lines (Pte) Ltd</fullName>
                </value>
                <value>
                    <fullName>Africa Car Carrier</fullName>
                </value>
                <value>
                    <fullName>Agility Project Logistics, Inc.</fullName>
                </value>
                <value>
                    <fullName>Alaska Marine Lines</fullName>
                </value>
                <value>
                    <fullName>Albacor Shipping Inc.</fullName>
                </value>
                <value>
                    <fullName>Alianca</fullName>
                </value>
                <value>
                    <fullName>Aloha Cargo Transport</fullName>
                </value>
                <value>
                    <fullName>American Roll-On Roll-Off Carrier</fullName>
                </value>
                <value>
                    <fullName>American Shipping and Chartering</fullName>
                </value>
                <value>
                    <fullName>AMS Breakbulk</fullName>
                </value>
                <value>
                    <fullName>Aneka NV</fullName>
                </value>
                <value>
                    <fullName>ANL</fullName>
                </value>
                <value>
                    <fullName>Antillean Marine</fullName>
                </value>
                <value>
                    <fullName>Antilles Freight Corp.</fullName>
                </value>
                <value>
                    <fullName>APL</fullName>
                </value>
                <value>
                    <fullName>Appenship</fullName>
                </value>
                <value>
                    <fullName>Argo Coral Maritime (Israel)</fullName>
                </value>
                <value>
                    <fullName>Arkas Line</fullName>
                </value>
                <value>
                    <fullName>Arkon Shipping</fullName>
                </value>
                <value>
                    <fullName>Arrowpac, Inc.</fullName>
                </value>
                <value>
                    <fullName>Atlantic Container Line</fullName>
                </value>
                <value>
                    <fullName>Atlantic Ro-Ro Carriers</fullName>
                </value>
                <value>
                    <fullName>Austral Asia Line</fullName>
                </value>
                <value>
                    <fullName>Azul Overseas Ltd.</fullName>
                </value>
                <value>
                    <fullName>AZURE Shipping</fullName>
                </value>
                <value>
                    <fullName>B.S.L.E. Malta Limited</fullName>
                </value>
                <value>
                    <fullName>BaltiCarrier / Spliethoff</fullName>
                </value>
                <value>
                    <fullName>Baltic Ireland Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Discharge__c</fullName>
        <formula>Route__r.Country_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Country of Discharge&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Country of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Load__c</fullName>
        <formula>Route__r.Country_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Country of Load&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Country of Loading</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_for_Arrival__c</fullName>
        <formula>ROUND( Vessel_Flight_ETA_Point_of_Discharge__c - TODAY() ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Vessel ETA Point of Discharge&quot; - today&apos;s date</inlineHelpText>
        <label>Days for Arrival</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_Departure__c</fullName>
        <formula>ROUND( Vessel_Flight_ETD_Point_of_Load__c -TODAY() ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Vessel ETD Point of Load&quot; - today&apos;s date</inlineHelpText>
        <label>Days for Departure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMO__c</fullName>
        <label>IMO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MMSI__c</fullName>
        <label>MMSI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Airport_of_Discharge__c</fullName>
        <formula>Route__r.Port_Airport_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Port of Discharge&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Port of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Airport_of_Load__c</fullName>
        <formula>Route__r.Port_Airport_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Port of Load&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Port of Loading</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Carrier_Line_Load_Point__c</referenceTo>
        <relationshipName>Vessel_Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transit_Time__c</fullName>
        <formula>ROUND(Vessel_Flight_ETA_Point_of_Discharge__c - Vessel_Flight_ETD_Point_of_Load__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Vessel ETA Point of Discharge&quot; - &quot;Vessel ETD Point of Load&quot;</inlineHelpText>
        <label>Transit Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Completed_Discharge__c</fullName>
        <label>Vessel Completed Discharge</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vessel_Course__c</fullName>
        <label>Vessel Course</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Flight_Arrived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vessel Arrived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vessel_Flight_ETA_Point_of_Discharge__c</fullName>
        <label>ETA Port of Discharge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vessel_Flight_ETD_Point_of_Load__c</fullName>
        <label>ETD Port of Loading</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vessel_Information__c</fullName>
        <label>Vessel Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vessel_Latitude__c</fullName>
        <label>Vessel Latitude</label>
        <precision>13</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Longitude__c</fullName>
        <label>Vessel Longitude</label>
        <precision>13</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Speed__c</fullName>
        <label>Vessel Speed</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Train_Truck__c</fullName>
        <label>Vessel Train Truck</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Vessel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IMO__c</columns>
        <columns>Route__c</columns>
        <columns>Vessel_Information__c</columns>
        <columns>Last_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vessel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vessels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>